# leaseclear

./: .gitignore  AGENTS.md  EVALS.md  METRICS.md  README.md  dev.sh  docker-compose.yml
backend/: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  railpack.json
backend/scripts/: apply_schema.py  create_db.py  db_preview.py  export_pdf_pipeline.py  generate_corpus_chunks.py  generate_test_corpus.py  ingest.py  init_db.py  preview_db.py  run_eval.py  run_evals.py  seed_db.py  smoke_build_user_message.py  smoke_fusion.py  smoke_generation.py  smoke_stream_generation.py  smoke_validate.py
backend/src/leaseclear/: __init__.py  schema.py  types.py
backend/src/leaseclear/api/: auth.py  documents.py  limiter.py  main.py  query.py  schemas.py  suggestions.py
backend/src/leaseclear/auth/: deps.py  google.py  jwt.py  password.py  users.py
backend/src/leaseclear/core/: config.py
backend/src/leaseclear/db/: __init__.py  admin.py  connection.py  logs.py  schema.sql  seed.py
backend/src/leaseclear/evals/: answer_match.py  dataset.py  db.py  judge.py  metrics.py  pipeline.py  report.py  retrieval_recall.py  runner.py  summary.py  types.py
backend/src/leaseclear/filtering/: documents.py  filter.py
backend/src/leaseclear/generation/: gate.py  generate.py  label.py  parse.py  prompts.py  questions.py  validate.py
backend/src/leaseclear/ingestion/: assign.py  chunk.py  documents.py  embed.py  ingest.py  metadata.py  parse.py  slug.py  store.py
backend/src/leaseclear/retrieval/: fusion.py  hybrid.py  lexical.py  lexical_search.py  search.py  trigram.py  vector.py  vector_search.py
backend/src/leaseclear/utils/: pretty_print.py  text.py
backend/tests/: conftest.py  corpus_fixture.py  db.py  test_chunk.py  test_parse.py  test_smoke.py
backend/tests/api/: conftest.py  test_auth.py  test_documents_chunks.py  test_documents_delete.py  test_documents_list.py  test_query.py  test_rate_limit.py
backend/tests/data/: corpus.py  generate_test_lease_chunks.py  test_lease_chunks.json  texas-washington_price_chunks.json  texas-washington_price_parsed.json
backend/tests/db/: test_logs.py
backend/tests/evals/: conftest.py  test_eval_suite.py  test_golden_loader.py  test_judge.py  test_metrics.py  test_recall.py  test_report.py
backend/tests/filtering/: test_filter.py
backend/tests/fixtures/: expected_chunks_lease.py  expected_parsed_lease.py  seed_corpus.json
backend/tests/generation/: conftest.py  test_build_user_message.py  test_citation.py  test_extract_citations.py  test_generate.py  test_label.py  test_validate.py
backend/tests/ingestion/: corpus.py  test_chunk.py  test_metadata.py  test_parse.py
backend/tests/ingestion/data/: expected_chunks_lease.py  expected_parsed_lease.py
backend/tests/retrieval/: conftest.py  metrics.py  test_fusion.py  test_hybrid_search.py  test_lexical_search.py  test_search.py  test_trigram_search.py  test_vector_search.py
backend/tests/retrieval/data/: mrr_comparison_cases.py  search_cases_lease.py  (+1 more)
backend/tests/scripts/: generate_seed_corpus.py
corpus/: .gitignore  EDGE-CASES.md  data.py  doc_meta.py  generate.py  macros.j2  pyproject.toml  registry.py  render.py  template.j2  themes.py
corpus/california/: data.py  model.py  template.j2
corpus/california/cases/: johnson_kim.py  vega_whitfield.py
corpus/data/: __init__.py  baseline.py  conflicting_pet_policy.py  missing_rent.py
corpus/families/complex/: __init__.py  model.py  template.j2
corpus/families/simple/: __init__.py  model.py  template.j2
corpus/families/standard/: __init__.py  model.py  template.j2
corpus/meridian/: data.py  model.py  template.j2
corpus/meridian/cases/: nadkarni_osei.py  park_chen.py
corpus/minnesota/: model.py  template.j2
corpus/minnesota/cases/: lindqvist_patel.py  okonkwo_berg.py
corpus/models/: lease.py
corpus/templates/: document.html.j2  lease.html.j2
corpus/texas/: model.py  template.j2
corpus/texas/cases/: morales_reyes.py  washington_price.py
(+86 files in other folders)
